--- a/style.css
+++ b/style.css
@@ -60,14 +60,6 @@ body {
   bottom: 26.67%;
 }
   
-/*Status Bar*/
-
-.statusbar {
-  position: absolute;
-  width: 375px;
-  height: 20px;
-}
-
 /*Segmented Controls*/
 
 .segmented-controls {
@@ -80,4 +72,22 @@ body {
   column-width: 170px;
   border: 1px solid #007AFF;
   box-sizing: border-box;
+}
+
+.segmented-left-control {
+  position: absolute;
+  left: 0px;
+  right: 170px;
+  top: 0px;
+  bottom: 0px;
+  background: #007AFF;
+}
+
+.segmented-right-control {
+  position: absolute;
+  left: 180.43px;
+  right: 7.68px;
+  top: 0px;
+  bottom: 0px;
+  background: #FFFFFF;
 }
