--- a/style.css
+++ b/style.css
@@ -19,7 +19,9 @@ body {
   background-color: #FFFFFF;
   border: 1px solid #DADADA;
   box-sizing: border-box;
-  border-radius: 10px
+  border-radius: 10px;
+  padding-top: 33px;
+  padding-left: 1px;
 }
 
 /* List */
