--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ body {
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
-  font-size: 15px;
+  font-size: 12px;
   line-height: 18px;
   display: flex;
   align-items: flex-end;
@@ -97,12 +97,29 @@ body {
   color: #979797;
 }
 
-.arrowright{
+.time {
   position: relative;
-  left: 320px;
-  top: -130px;
+  left: 275px;
+  top: -135px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: medium;
+  font-size: 14px;
+  line-height: 18px;
+  display: flex;
+  align-items: flex-end;
+  letter-spacing: -0.016em;
+  color: #000000;
 }
 
-.bus :hover {
-  background-color: #ccc;
+.arrowright{
+  position: relative;
+  left: 340px;
+  top: -172px;
+}
+
+.arrowright1{
+  position: relative;
+  left: 340px;
+  top: -132px;
 }
