--- a/style.css
+++ b/style.css
@@ -2,30 +2,28 @@
   box-sizing: border-box;
 }
 
-body {
+@media screen and (min-width: 375px) {
+  body {
   position: relative;
   width: 375px;
   height: 667px;
   background-color: #FFFFFF;
 }
-
-.statusbar {
+  .statusbar {
   position: relative;
 }
-
-.map {
+  .map {
   position: relative;
 }
-
-.backbutton {
+  .backbutton {
   position: relative;
   left: 14px;
   top: -170px;
 }
 
 /* List */
-
-.menu {
+  
+  .menu {
   width: 375px;
   height: 540px;
   background-color: #FFFFFF;
@@ -35,14 +33,13 @@ body {
   padding-top: 33px;
   padding-left: 1px;
 }
-
-.segmentedcontrols {
+  
+  .segmentedcontrols {
   position: relative;
   left: 14px;
   top: -10px;
 }
-
-.bus {
+  .bus {
   width: 371px;
   height: 60px;
   left: 2px;
@@ -51,6 +48,7 @@ body {
   position: initial;
   border: 1px solid #DADADA;
 } 
+}
 
 .busnumber {
   position: relative;
