--- a/style.css
+++ b/style.css
@@ -24,10 +24,8 @@
 /* List */
   
   .menu {
-  position: relative;  
   width: 375px;
   height: 540px;
-  top: -50px;
   background-color: #FFFFFF;
   border: 1px solid #DADADA;
   box-sizing: border-box;
@@ -35,15 +33,24 @@
   padding-top: 33px;
   padding-left: 1px;
 }
-  
-  .segmentedcontrols {
-  position: relative;
-  left: 14px;
-  top: -10px;
+  .segmentedcontrols-col1 {
+    position: relative;
+    left: 80px;
+    top: -10px;
+    border-width: 173px;
+    border-height: 29px;
+    border-color: #07AFF;
+}
+  .segmentedcontrols-col2 {
+    position: relative;
+    left: 240px;
+    top: -30px;
+    width: 173px;
+    height: 29px;
 }
   .bus {
   width: 371px;
-  height: 58px;
+  height: 60px;
   left: 2px;
   top: 179px;
   background-color: #FFFFFF;
@@ -55,7 +62,7 @@
 .busnumber {
   position: relative;
   left: 14.02px;
-  top: 15px;
+  top: -10px;
   font-family: Roboto;
   font-style: normal;
   font-weight: bold;
@@ -70,7 +77,7 @@
 .busline {
   position: relative;
   left: 70.12px;
-  top: -15px;
+  top: -65px;
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
@@ -85,7 +92,7 @@
 .subtitle {
   position: relative;
   left: 70.12px;
-  top: -17px;
+  top: -85px;
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
@@ -100,7 +107,7 @@
 .time {
   position: relative;
   left: 275px;
-  top: -50px;
+  top: -135px;
   font-family: Roboto;
   font-style: normal;
   font-weight: medium;
@@ -115,13 +122,11 @@
 .arrowright{
   position: relative;
   left: 340px;
-  top: -65px;
+  top: -172px;
 }
 
 .arrowright1{
   position: relative;
   left: 340px;
-  top: -47px;
+  top: -132px;
 }
-
-
