--- a/style.css
+++ b/style.css
@@ -15,18 +15,18 @@
   .map {
   position: relative;
 }
-  .backbutton {
+  .searchbar {
   position: relative;
-  left: 14px;
-  top: -170px;
+  left: 7px;
+  top: -590px;
 }
 
 /* List */
   
   .menu {
-  position: relative;  
+  position: relative;
   width: 375px;
-  height: 540px;
+  height: 57px;
   top: -50px;
   background-color: #FFFFFF;
   border: 1px solid #DADADA;
@@ -38,10 +38,10 @@
   
   .segmentedcontrols-col1 {
   position: relative;
-  left: 14px;
-  top: -10px;
-  width: 173px;
-  height: 29px;
+  left: 7px;
+  top: -25px;
+  width: 175px;
+  height: 44px;
   text-align: center;
   border-style: solid;
   border-color: blue;
@@ -51,9 +51,9 @@
   .segmentedcontrols-col2 {
   position: relative;
   left: 187px;
-  top: -39px;
-  width: 173px;
-  height: 29px;
+  top: -69px;
+  width: 175px;
+  height: 44px;
   text-align: center;
   border-style: solid;
   border-color: blue;
@@ -70,84 +70,3 @@ a {
   top: initial;
 }
 
-  .bus {
-  width: 371px;
-  height: 58px;
-  top: -25px;
-  background-color: #FFFFFF;
-  position: relative;
-  border: 1px solid #DADADA;
-} 
-
-
-  .busnumber {
-  position: relative;
-  left: 14.02px;
-  top: 15px;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 24px;
-  line-height: 28px;
-  display: flex;
-  text-align: center;
-  letter-spacing: -0.016em;
-  color: #000000;
-}
-
-  .busline {
-  position: relative;
-  left: 70.12px;
-  top: -15px;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 17px;
-  line-height: 22px;
-  display: flex;
-  align-items: center;
-  letter-spacing: -0.0241176em;
-  color: #000000;
-}
-
-  .subtitle {
-  position: relative;
-  left: 70.12px;
-  top: -17px;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 18px;
-  display: flex;
-  align-items: flex-end;
-  letter-spacing: -0.016em;
-  color: #979797;
-}
-
-  .time {
-  position: relative;
-  left: 275px;
-  top: -50px;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: medium;
-  font-size: 14px;
-  line-height: 18px;
-  display: flex;
-  align-items: flex-end;
-  letter-spacing: -0.016em;
-  color: #000000;
-}
-
-  .arrowright{
-  position: relative;
-  left: 340px;
-  top: -65px;
-}
-
-  .arrowright1{
-  position: relative;
-  left: 340px;
-  top: -47px;
-}
