--- a/style_lines.css
+++ b/style_lines.css
@@ -125,6 +125,36 @@ a {
   color: #979797;
 }
 
+.busline1 {
+  position: relative;
+  left: 70.12px;
+  top: -15px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 17px;
+  line-height: 22px;
+  display: flex;
+  align-items: center;
+  letter-spacing: -0.0241176em;
+  color: #000000;
+}
+
+  .subtitle1 {
+  position: relative;
+  left: 70.12px;
+  top: -17px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 18px;
+  display: flex;
+  align-items: flex-end;
+  letter-spacing: -0.016em;
+  color: #979797;
+}
+
   .time {
   position: relative;
   left: 275px;
