--- a/style_arrivals.css
+++ b/style_arrivals.css
@@ -171,3 +171,13 @@ color: #000000;
   letter-spacing: -0.016em;
   color: #000000;
 }
+
+a {
+  font-size: 18px;
+  font-weight: medium;
+  font-family: Roboto;
+  color: black;
+  text-decoration: none;
+  position: relative;
+  top: initial;
+}
