--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@
   .map {
   position: relative;
 }
-  .searchbar {
+  .buttons {
   position: relative;
-  left: 7px;
+  left: 310px;
   top: -590px;
 }
 
@@ -27,7 +27,7 @@
   position: relative;
   width: 375px;
   height: 57px;
-  top: -15px;
+  top: -105px;
   background-color: #FFFFFF;
   border: 1px solid #DADADA;
   box-sizing: border-box;
