--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ a {
   font-family: Roboto;
   color: #07Aff;
   text-decoration: none;
-  position: center;
-  top: initial;
+  position: relative;
+  top: 10px;
 }
-
